crates/search/tests/dynamic_search_rules/snapshots/mod.rs/patch_rule/actions.snap
---
source: crates/indexsearch/tests/dynamic_search_rules/mod.rs
---
{
  "uid": "updatable",
  "description": "Updated",
  "priority": 10,
  "active": true,
  "conditions": [
    {
      "scope": "query",
      "isEmpty": true
    }
  ],
  "actions": [
    {
      "selector": {
        "id": "99"
      },
      "action": {
        "type": "pin",
        "position": 7
      }
    }
  ]
}
